terraform/alb.tf
resource "aws_lb" "alb" {
  name               = "SmartTodoWebApp-ALB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]
  tags = {
    Name = "SmartTodoWebApp-ALB"
  }
}

resource "aws_lb_target_group" "tg" {
  name     = "SmartTodoWebApp-TG"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_target_group_attachment" "web_server_1" {
  target_group_arn = aws_lb_target_group.tg.arn
  target_id        = aws_instance.web_server_1.id
  port             = 80
}

resource "aws_lb_target_group_attachment" "web_server_2" {
  target_group_arn = aws_lb_target_group.tg.arn
  target_id        = aws_instance.web_server_2.id
  port             = 80
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}

# resource "aws_lb_listener" "https" {
# load_balancer_arn = aws_lb.alb.arn
# port              = 443
#  protocol          = "HTTPS"
# certificate_arn   = aws_acm_certificate.cert.arn
#default_action {
# type             = "forward"
# target_group_arn = aws_lb_target_group.tg.arn
#}
#}
